overflow fix

--- a/_src/scss/2-components/_megamenu.scss
+++ b/_src/scss/2-components/_megamenu.scss
@@ -11,6 +11,9 @@
 		[swift-container] {
 			overflow: hidden;
 			scrollbar-width: none;
+			max-height: 70vh;
+			scrollbar-width: thin;
+			overflow-y: auto;
 		}
 		
 		.megamenu-grid {
@@ -19,9 +22,6 @@
 		
 		.megamenu-col {
 			width: min(14rem, 100%);
-			max-height: 70vh;
-			scrollbar-width: none;
-			overflow-y: auto;	
 		}
 	}
 }
